<resources>
    <!--  Application Name  -->
    <string name="app_name">Calendar</string>

    <!--  Common Strings  -->
    <string name="event_name">Event Name</string>
    <string name="new_event">Create Event</string>
    <string name="date">Selected Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="login">Login | Register</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_label">Email</string>
    <string name="email_autofill">Email Address Input</string>
    <string name="password_label">Password</string>
    <string name="password_autofill">Password Input</string>


    <!-- Days, Months, Years -->
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>


    <!-- Input Field Hints -->
    <string name="event_name_input">Event Name Input Field</string>
    <string name="email_hint">email@email.com</string>
    <string name="password_hint">Password</string>
    <string name="date_hint">2022-dec-25</string>
    <string name="time_hint">13:00</string>


    <!-- Button Descriptions -->
    <string name="monthly_button">Button Labelled Monthly will change view to show selected Month</string>
    <string name="weekly_button">Button Labelled Weekly will change view to show selected Week</string>
    <string name="daily_button">Button Labelled Daily will change view to show selected Day</string>

    <string name="forward_button">Switches to Next Month, Week or Day in View</string>
    <string name="back_button">Switches to Previous Month, Week or Day in View</string>


    <!--  Image Descriptions  -->
    <string name="email_image">Image of Email Icon</string>
    <string name="password_image">Image of Password Icon</string>
    <string name="month_amp_year"><![CDATA[Month & Year]]></string>
</resources>