<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeekViewActivity">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/daily_button"
        android:onClick="dailyAction"
        android:text="@string/daily"
        android:textColor="?android:attr/colorForeground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_view_day_24"
        app:iconGravity="textStart"
        app:iconTint="?android:attr/colorForeground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back_button"
            android:onClick="lastWeek"
            android:textColor="?android:attr/colorForeground"
            android:textStyle="bold"
            app:icon="@drawable/ic_back_arrow"
            app:iconGravity="end"
            app:iconTint="?android:attr/colorForeground" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Month &amp; Year"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/forwardBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/forward_button"
            android:onClick="nextWeek"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@drawable/ic_forward_arrow"
            app:iconGravity="start"
            app:iconTint="?android:attr/colorForeground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="16sp" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="newEventAction"
        android:text="@string/new_event"
        android:textColor="?android:attr/colorForeground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_create_24"
        app:iconGravity="textStart"
        app:iconTint="?android:attr/colorForeground" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>


</LinearLayout>













